# RegistrationApp

./: CMakeLists.txt  Core.cpp  Core.h  HeatmapVisualizer.cpp  HeatmapVisualizer.h  Helper.cpp  Helper.h  ImageShort2D.cxx  ImageShort2D.h  LoadSeriesSafeAsVolume.cxx  LoadSeriesSafeAsVolume.h  Main.cpp  Toolbox.cxx  Toolbox.h  Visualizer.h  configwin.cpp  configwin.h  configwin.ui  moc_configwin.cpp  moc_configwin.cpp_parameters
IO/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.h
Registration/: CMakeLists.txt  DeformableRegistrationTest.cpp  RegisterTest2D.cxx  RegisterTest2D.h  Registrator.h
Visualization/: CMakeLists.txt  HeatmapVisualizer.h  Visualizer.h
